jalv (1.4.2) stable;

  * Fix crash when running "jalv" with bad command line arguments
  * Fix potential crash with UIs and debug printing
  * Fix parameter changes with Qt UI
  * Nicer printing of atom messages with -d
  * Add command-line option to control UI update frequency
  * Support rsz:minimumSize for atom and event ports
  * Fix default setting for non-sequential enumeration ports
    (patch from Robin Gareus)
  * Work around Gtk bug for labels on sliders (patch from Robin Gareus)
  * Upgrade to waf 1.7.11

 -- David Robillard <d@drobilla.net>  Fri, 09 Aug 2013 10:40:20 -0400

jalv (1.4.0) stable;

  * Send time information to plugin when Jack tempo changes
  * Group controls under headings if port group information is available
  * Add spinbuttons for precisely setting control values
  * Use a more efficient dense layout for controls
  * Make URI map thread-safe, fixing occasional crashes for plugins with UIs
  * Add menu bar and pass parent widget in Qt version for true UI embedding
  * Support state:loadDefaultState
  * Update to waf 1.7.8 and autowaf r90

 -- David Robillard <d@drobilla.net>  Fri, 22 Feb 2013 22:35:22 -0500

jalv (1.2.0) stable;

  * Tune UI update rate and ring size based on JACK rate and MIDI buffer size
    to handle the handle the maximum message rate the plugin can send.
  * Support lv2:sampleRate control ports.
  * Tolerate loading presets with port values that aren't xsd:decimal
  * Notify plugins of Jack transport changes by sending events (an atom:Blank
    with properties from the LV2 time extension)
  * Refuse to instantiate plugins which require unsupported features
  * Support LV2 buf-size extension (with all features)
  * Add Gtk3 UI
  * Port to MinGW
  * Fix Jack Session support

 -- David Robillard <d@drobilla.net>  Sun, 14 Oct 2012 18:38:53 -0400

jalv (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 18:42:42 -0400
