@@ -1,3 +1,10 @@
+jalv (1.4.3) unstable;
+
+  * Hide controls for ports with notOnGUI property in generic UI
+    (based on patch from Robin Gareus)
+
+ -- David Robillard <d@drobilla.net>  Thu, 31 Oct 2013 22:38:42 -0400
+
 jalv (1.4.2) stable;
 
   * Fix crash when running "jalv" with bad command line arguments
